--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entrega-1-backend",
+  "name": "entrega-2-backend",
   "version": "1.0.0",
   "description": "API de productos y carritos con persistencia en archivos (Express + FS)",
   "main": "src/app.js",
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.3",
     "socket.io": "^4.8.1"
